parse honghuashe.com html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#banner.location = banner/my-banner.txt
-#default UTF-8
-#banner.charset = UTF-8
-#banner.image.location = banner/concretepage.jpg
-#spring.main.banner-mode = off
+# data source and jpa
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/ygds
+spring.datasource.username=root
+spring.datasource.password=hc2013
